调整主页的图标显示宽度 col-lg-4 => col-sm-4

--- a/app/views/front/welcome/index.html.erb
+++ b/app/views/front/welcome/index.html.erb
@@ -48,24 +48,24 @@
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-sm-4">
           <div class="big-nav-icon-telephone"></div>
           <h2>手机预约</h2>
           <p>ios, android应用.</p>
           <p><a class="btn btn-success" href="#" role="button">进入 &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        </div><!-- /.col-sm-4 -->
+        <div class="col-sm-4">
           <div class="big-nav-icon-call"></div>
           <h2>电话预约</h2>
           <p>拨打400-400-400.</p>
           <p><a class="btn btn-success" href="#" role="button">进入 &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        </div><!-- /.col-sm-4 -->
+        <div class="col-sm-4">
           <div class="big-nav-icon-weixin"></div>
           <h2>官方微信</h2>
           <p>扫一扫，关注我们.</p>
           <p><a class="btn btn-success" href="#" role="button">进入 &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+        </div><!-- /.col-sm-4 -->
       </div><!-- /.row -->
 
 
