--- a/app/views/front/welcome/index.html.erb
+++ b/app/views/front/welcome/index.html.erb
@@ -1,5 +1,5 @@
     <style>
-      #main-content {
+      #main-jumbotron {
         background: url(<%= asset_path 'main_bg_image2.jpg' %>)
                     repeat-x transparent 50% 50%;
         height: 400px;
@@ -20,7 +20,7 @@
     </style>
 
     <!-- jumbotron -->
-    <div id="main-content" class="jumbotron wrapped-content">
+    <div id="main-jumbotron" class="jumbotron wrapped-content">
       <div class="container">
         <p style="width: 130px; margin-top: 98px; margin-left: -60px; font-weight: bold;" class="btn">在线预约检车</p>
         <!--
@@ -29,7 +29,7 @@
           <p>轻松预约，不用排队，个性服务，保您满意</p>
           <div class="bottom clearfix">
             <p>
-            <a class="btn btn-lg btn-primary" href="<%= front_order_path(1) %>" role="button" style="font-size:30px;">在线预约检车 &raquo;</a>
+              <a class="btn btn-lg btn-primary" href="#" role="button" style="font-size:30px;">在线预约检车 &raquo;</a>
             </p>
           </div>
         </h2>
