--- a/app/views/front/welcome/list_posts.html.erb
+++ b/app/views/front/welcome/list_posts.html.erb
@@ -1,18 +1,10 @@
-    <style>
-      #main-content {
-        margin-top: 50px;
-        text-align: left;
-      }
-    </style>
-
-    <div id="main-content" class="container marketing wrapped-content">
-
+    <div  class="container marketing">
       <div class="row">
         <div class="col-md-3">
           <%= render "sidebar" %>
         </div><!-- /.col -->
 
-        <div class="col-md-9" style="min-height: 300px;">
+        <div class="col-md-9 car-content-side">
           <div class="info-list list-group">
             <% @catagory.posts.published.each do |post| %>
             <a href="<%= front_post_path(@catagory, post) %>" class="list-group-item">
