--- a/app/views/front/welcome/show_post.html.erb
+++ b/app/views/front/welcome/show_post.html.erb
@@ -1,18 +1,10 @@
-    <style>
-      #main-content {
-        margin-top: 50px;
-        text-align: left;
-      }
-    </style>
-
-    <div id="main-content" class="container marketing wrapped-content">
-
+    <div class="container marketing">
       <div class="row">
         <div class="col-md-3">
           <%= render "sidebar" %>
         </div><!-- /.col -->
 
-        <div class="col-md-9 info-list post" style="min-height: 300px;">
+        <div class="col-md-9 car-content-side info-list post">
           <div class="title">
             <h4 class="text-center"><%= @post.title %></h4>
             <p class="text-center tips-date">
