--- a/app/views/layouts/front/_navbar.html.erb
+++ b/app/views/layouts/front/_navbar.html.erb
@@ -8,18 +8,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "陕西车辆年审网", root_path, {class: 'navbar-brand', style: "color:white;"} %>
+          <%= link_to t('view.site.front_title'), root_path, {class: 'navbar-brand', style: "color:white;"} %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="<%= current_nav_class(root_path) %>"><%= link_to "主页", root_path %></li>
+            <li class="<%= current_nav_class(root_path) %>">
+              <%= link_to t('view.label.homepage'), root_path %>
+            </li>
             <% @catagories.each do |catagory|  %>
               <li class="<%= current_nav_class(front_catagory_path(catagory)) %>">
                 <%= link_to catagory.name, front_catagory_path(catagory) %>
               </li>
             <% end %>
+            <li class="<%= current_nav_class(front_station_index_path)%>">
+              <%= link_to Station.model_name.human, front_station_index_path %>
+            </li>
             <li><a href="#">提问留言</a></li>
-            <li><a href="#contact">车检站地图</a></li>
           </ul>
           <ul id="user-action" class="nav navbar-nav navbar-right">
             <li><a href="#" class="button flat-blue-button" data-toggle="modal" data-target="#myModal">
