--- a/app/views/front/welcome/index.html.erb
+++ b/app/views/front/welcome/index.html.erb
@@ -8,15 +8,10 @@
         text-align: center;
       }
 
-      #main-content .bottom {
+      #main-jumbotron .bottom {
         margin: auto;
         margin-top: 60px;
       }
-
-      #nav_circle {
-        text-align: center;
-      }
-
     </style>
 
     <!-- jumbotron -->
@@ -44,24 +39,24 @@
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div id="nav_circle" class="container marketing wrapped-content">
+    <div id="nav_circle" class="container marketing text-center">
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-sm-4">
-          <div class="big-nav-icon-telephone"></div>
+          <div class="car-big-nav-icon-telephone"></div>
           <h2>手机预约</h2>
           <p>ios, android应用.</p>
           <p><a class="btn btn-success" href="#" role="button">进入 &raquo;</a></p>
         </div><!-- /.col-sm-4 -->
         <div class="col-sm-4">
-          <div class="big-nav-icon-call"></div>
+          <div class="car-big-nav-icon-call"></div>
           <h2>电话预约</h2>
           <p>拨打400-400-400.</p>
           <p><a class="btn btn-success" href="#" role="button">进入 &raquo;</a></p>
         </div><!-- /.col-sm-4 -->
         <div class="col-sm-4">
-          <div class="big-nav-icon-weixin"></div>
+          <div class="car-big-nav-icon-weixin"></div>
           <h2>官方微信</h2>
           <p>扫一扫，关注我们.</p>
           <p><a class="btn btn-success" href="#" role="button">进入 &raquo;</a></p>
