--- a/app/views/layouts/front/_footer.html.erb
+++ b/app/views/layouts/front/_footer.html.erb
@@ -2,7 +2,7 @@
       <div class="clearfix"></div>
       <hr class="featurette-divider">
 
-      <footer>
+      <footer class='text-center'>
         <p>&copy; 2014 西安车辆年检Company, Inc.</p>
         <p>&middot; <a href="#">联系我们</a> &middot; <a href="#">技术支持</a></p>
       </footer>
