--- a/app/assets/stylesheets/front.less
+++ b/app/assets/stylesheets/front.less
@@ -13,7 +13,11 @@
  * require_self
  */
 @import "twitter/bootstrap";
+@import "font-awesome";
+@import "ionicon/ionicons";
+// AdminLTE关联
+@import "adminlte/AdminLTE";
+@import "front/car_override";
 // 前端的通用样式
 @import "front/common";
-
 
