车检站一览画面查询功能ok

--- a/app/assets/stylesheets/front/car_override.less
+++ b/app/assets/stylesheets/front/car_override.less
@@ -151,8 +151,6 @@
   }
 }
 
-// -----------------------------------------
-// tab导航
-// -----------------------------------------
-
-
+.form-control {
+  color: #555;
+}
