--- a/app/views/front/welcome/index.html.erb
+++ b/app/views/front/welcome/index.html.erb
@@ -1,4 +1,8 @@
     <style>
+      #main-content {
+        background-color: #fff;
+        padding-bottom: 30px;
+      }
       #main-jumbotron {
         background: url(<%= asset_path 'main_bg_image2.jpg' %>)
                     repeat-x transparent 50% 50%;
@@ -6,6 +10,7 @@
         width: 100%;
         color: white;
         text-align: center;
+        margin-bottom: 20px;
       }
 
       #main-jumbotron .bottom {
