--- a/app/views/front/station/index.html.erb
+++ b/app/views/front/station/index.html.erb
@@ -1,4 +1,4 @@
-    <div  class="container marketing">
+    <div class="container marketing">
       <div class="row">
         <div class="col-md-3">
           <%= render "sidebar" %>
@@ -14,17 +14,44 @@
                 <dl>
                   <dt>行政区域</dt>
                   <dd>
-                    <a href=''>高新区</a>
-                    <a href=''>莲湖区</a>
-                    <a href=''>新城区</a>
+                  <% ChinaCity.list('610100').each do |item| %>
+                    <% _district_class = session[:station_conditions]['district'] && 
+                    session[:station_conditions]['district'] == item[1] ? 'active' : '' %>
+                    <%= link_to item[0], front_station_index_path({district: item[1]}), {class: _district_class} %>
+                  <% end %>
                   </dd>
                 </dl>
                 <dl>
                   <dt>名称查询</dt>
                   <dd>
-                    <input type='text'>
+                    <form action='<%= front_station_index_path%>' method='get'>
+                      <div class="input-group input-group-sm col-sm-5">
+                        <input type="text" class="form-control" name='name' value="<%= session[:station_conditions]['name']%>">
+                        <span class="input-group-btn">
+                          <button class="btn btn-info btn-flat" type="submit"><i class='fa fa-search-plus'></i></button>
+                        </span>
+                      </div>
+                    </form>
                   </dd>
                 </dl>
+                <dl class='selected'>
+                  <dt>已选条件</dt>
+                  <dd>
+                    <% if session[:station_conditions]['district'].present? %>
+                    <div>
+                      <%= ChinaCity.get(session[:station_conditions]['district']) %>
+                      <a href='<%= front_station_index_path(undistrict: true) %>' class="btn btn-info btn-xs"><i class="fa fa-times"></i></a>
+                    </div>
+                    <%end%>
+                    <% if session[:station_conditions]['name'].present? %>
+                    <div>
+                      <%= '名称：' + session[:station_conditions]['name'] %>
+                      <a href='<%= front_station_index_path(unname: true) %>' class="btn btn-info btn-xs"><i class="fa fa-times"></i></a>
+                    </div>
+                    <%end%>
+                  </dd>
+                </dl>
+                <div class='clearfix'></div>
               </div>
             </div>
             <div class='car-result'>
@@ -39,6 +66,7 @@
                 <div class="tab-content">
                   <div class="tab-pane active" id="tab_1">
                     <ul class='car-list-result'>
+                      <% @stations.each do |s| %>
                       <li class='list-item'>
                         <div class='logo'>
                           <%= image_tag 'weixiu.png', {class: 'img-thumbnail'} %>
@@ -47,28 +75,14 @@
                           </div>
                         </div>
                         <div class='info'>
-                          <div class='title'><h4>东郊车检所</h4></div>
-                          <p>详细地址：西安市东郊123号</p>
-                          <p>联系电话：029-88888881</p>
-                          <p>简单介绍：东郊车检车检东郊车检车检东郊车检车检东郊车检车检</p>
+                          <div class='title'><h4><%= s.name %></h4></div>
+                          <p>详细地址：<%= s.address_text %></p>
+                          <p>联系电话：<%= s.telephone %></p>
+                          <p>简单介绍：<%= s.recommend.present? ? s.recommend : '暂无' %></p>
                         </div>
                         <div class='clearfix'></div>
                       </li>
-                      <li class='list-item'>
-                        <div class='logo'>
-                          <%= image_tag 'weixiu.png', {class: 'img-thumbnail'} %>
-                          <div class='action text-center'>
-                            <a class='btn btn-primary'>在线预定</a>
-                          </div>
-                        </div>
-                        <div class='info'>
-                          <div class='title'><h4>东郊车检所</h4></div>
-                          <p>详细地址：西安市东郊123号</p>
-                          <p>联系电话：029-88888881</p>
-                          <p>简单介绍：东郊车检车检东郊车检车检东郊车检车检东郊车检车检</p>
-                        </div>
-                        <div class='clearfix'></div>
-                      </li>
+                      <% end %>
                     </ul>
                   </div><!-- /.tab-pane -->
                   <div class="tab-pane" id="tab_2">
