验证码初步完成，生成了devise user的controller

--- a/app/views/layouts/front/_navbar.html.erb
+++ b/app/views/layouts/front/_navbar.html.erb
@@ -28,7 +28,7 @@
           <div id="user-action" class="pull-right">
             <% if current_user %>
               <div class="btn-group">
-                  <button type="button" class="btn btn-success btn-sm"><%= current_user.email %></button>
+                  <button type="button" class="btn btn-success btn-sm"><%= current_user.show_name %></button>
                   <button type="button" class="btn btn-success btn-sm dropdown-toggle" data-toggle="dropdown">
                       <span class="caret"></span>
                       <span class="sr-only">Toggle Dropdown</span>
