手机动态验证码的view实现

--- a/app/views/front/welcome/index.html.erb
+++ b/app/views/front/welcome/index.html.erb
@@ -19,6 +19,8 @@
       }
     </style>
 
+    <div><%= flash[:notice] %></div>
+    <div><%= flash[:alert] %></div>
     <!-- jumbotron -->
     <div id="main-jumbotron" class="jumbotron wrapped-content">
       <div class="container">
