--- a/app/assets/stylesheets/common/base.less
+++ b/app/assets/stylesheets/common/base.less
@@ -14,7 +14,7 @@ html, body {
     li {
       padding: 0px;
       margin-bottom: 0px;
-      width: 100px;
+      min-width: 100px;
       text-align: center;
     }
     li > a {
