--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,15 +1,24 @@
-<h2>Forgot your password?</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
+<% content_for :head_title do %>
+  忘记密码？
 <% end %>
 
-<%= render "users/shared/links" %>
+<div class='row car-devise'>
+  <div class='col-sm-8 car-left-side'>
+    <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name),
+        html: {class: 'form-horizontal', role: 'form', method: :post} ) do |f| %>
+
+      <div class='car-form-items'>
+        <%= f.input :email, required: true, autofocus: true %>
+      </div>
+
+      <div class="car-form-actions">
+        <%= f.button :submit, "发送重置密码邮件",
+              class: 'btn btn-success col-sm-offset-2' %>
+      </div>
+    <% end %>
+  </div>
+
+  <div class='col-sm-4 car-right-side'>
+    <%= render "users/shared/links" %>
+  </div>
+</div>
