--- a/app/views/front/station/index.html.erb
+++ b/app/views/front/station/index.html.erb
@@ -71,7 +71,7 @@
                         <div class='logo'>
                           <%= image_tag 'weixiu.png', {class: 'img-thumbnail'} %>
                           <div class='action text-center'>
-                            <a class='btn btn-primary'>在线预定</a>
+                            <%= link_to "在线预定", front_station_order_path(s), class: "btn btn-primary" %>
                           </div>
                         </div>
                         <div class='info'>
