--- a/app/views/front/station/steps/_form_step_basic_info.html.erb
+++ b/app/views/front/station/steps/_form_step_basic_info.html.erb
@@ -1,9 +1,3 @@
-  <div class="form-group">
-    <label for="inputCarNo" class="col-sm-2 control-label">车牌号</label>
-    <div class="col-sm-6">
-      <div class="input-group">
-        <span class="input-group-addon">陕</span>
-        <input type="text" class="form-control" id="inputCarNo" placeholder="AXXXXX">
-      </div>
-    </div>
-  </div>
+  <%= f.input :car_number, required: true %>
+  <%= f.input :owner_name, required: true %>
+  <%= f.input :telephone, required: true %>
