--- a/app/views/front/welcome/index.html.erb
+++ b/app/views/front/welcome/index.html.erb
@@ -1,5 +1,6 @@
     <style>
       #main-content {
+        margin-top: 50px;
         background-color: #fff;
         padding-bottom: 30px;
       }
