--- a/app/views/front/station/steps/_form_step_confirmation.html.erb
+++ b/app/views/front/station/steps/_form_step_confirmation.html.erb
@@ -1,46 +1,37 @@
 <div class="confirmation">
   <div class="panel panel-info">
-    <div class="panel-heading">基本信息</div>
+    <div class="panel-heading">预约信息确认</div>
     <div class="panel-body">
       <div class="form-group">
-        <label class="col-sm-3 control-label">车牌号</label>
+        <label class="col-sm-3 control-label"><%=Order.human_attribute_name(:station_id)%></label>
         <div class="col-sm-9">
-          <p class="form-control-static important-info">陕A12345</p>
+          <p class="form-control-static important-info"><%=@order.station.name%></p>
+          <p class="form-control-static">具体地址：<%=@order.station.address_text%></p>
+          <p class="form-control-static">联系电话：<%=@order.station.telephone%></p>
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label">手机号</label>
+        <label class="col-sm-3 control-label"><%=Order.human_attribute_name(:order_date)%></label>
         <div class="col-sm-9">
-          <p class="form-control-static">18100000000</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-info">
-    <div class="panel-heading">预约信息</div>
-    <div class="panel-body">
-      <div class="form-group">
-        <label class="col-sm-3 control-label">预约车检站</label>
-        <div class="col-sm-9">
-          <p class="form-control-static important-info">东郊车检站</p>
+          <p class="form-control-static"><%=@order.order_date%></p>
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label">地址</label>
+        <label class="col-sm-3 control-label"><%=Order.human_attribute_name(:owner_name)%></label>
         <div class="col-sm-9">
-          <p class="form-control-static">东郊XXX路XX号</p>
+          <p class="form-control-static"><%=@order.owner_name%></p>
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label">联系电话</label>
+        <label class="col-sm-3 control-label"><%=Order.human_attribute_name(:car_number)%></label>
         <div class="col-sm-9">
-          <p class="form-control-static">400-400-400</p>
+          <p class="form-control-static important-info"><%=@order.car_number%></p>
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label">预约时间</label>
+        <label class="col-sm-3 control-label"><%=Order.human_attribute_name(:telephone)%></label>
         <div class="col-sm-9">
-          <p class="form-control-static important-info">2014年6月5日 星期五 上午8:00-10:00</p>
+          <p class="form-control-static important-info"><%=@order.telephone%></p>
         </div>
       </div>
     </div>
