--- a/app/views/front/station/steps/_form_step_select_date.html.erb
+++ b/app/views/front/station/steps/_form_step_select_date.html.erb
@@ -1,10 +1,2 @@
-                    <div class="row">
-                        <div class="form-left">Email *</div>
-                        <div class="form-right"><input type="text" id="email" name="email" class="form-input" /></div>
-                        <div class="form-error"></div>
-                    </div>
-                    <div class="row">
-                        <div class="form-left">Mobile No</div>
-                        <div class="form-right"><input type="text" id="mobile" name="mobile" class="form-input" /></div>
-                        <div class="form-error"></div>
-                    </div>
+<%= f.input :order_date, required: true %>
+<%= f.input :order_time, required: true %>
